# addon-scriptengine-quickjs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  addon.yaml  build.sh  readme.md
qjs/: Cargo.toml  changes.md
qjs-sys/: build.rs  quickjs-2019-10-27.tar.xz
qjs/src/: cfunc.rs  eval.rs  lib.rs  value.rs
scriptengine_quickjs/: Cargo.toml
scriptengine_quickjs/src/: main.rs
tests/: hello.js  test.js
