[package]
name = "qjs"
version = "0.1.2"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Rust binding for the QuickJS Javascript Engine"
repository = "https://github.com/flier/rust-quickjs"
readme = "README.md"
license = "MIT"
keywords = ["javascript", "quickjs"]
categories = ["api-bindings"]
edition = "2018"

[features]
default = ["bignum", "repl", "qjscalc", "stdlib"]
bignum = ["qjs-sys/bignum"]
repl = ["qjs-sys/repl"]
qjscalc = ["qjs-sys/qjscalc"]
lto = ["qjs-sys/lto"]
stdlib = []

[dependencies]
log = "0.4"
failure = "0.1"
bitflags = "1.1"
foreign-types = "0.4"
lazy_static = "1.3"
cstr = "0.1"
proc-macro-hack = "0.5"

qjs-sys = { version = "0.1", path = "../qjs-sys" }
qjs-derive = { version = "0.1"}


[dev-dependencies]
pretty_env_logger = "0.3"
cfg-if = "0.1"
tempfile = "3.1"
